# crazyparking

./: ChangeLog  Makefile.am  Makefile.in  README  SOURCES  configure  configure.ac  crazyparking.desktop  makefile
data/: Makefile.am  Makefile.in  br.org.indt.crazyparking.service.in  br.org.indt.crazyparking_startup.service.in  crazyparking.conf.in  crazyparking.desktop.in  crazyparking.game.in  crazyparking.sh.in
data/mazes/: Makefile.am  Makefile.in  mazes.txt
data/pixmaps/: Makefile.am  Makefile.in
data/sounds/: Makefile.am  Makefile.in
debian/: changelog  control  copyright  crazyparking.postinst  rules
rpm/: crazyparking.spec
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  crazypark.c  images.c  images.h  level.c  level.h
src/launcher/: Makefile.am  Makefile.in  crazyparking.c.in
src/plugin/: Makefile.am  Makefile.in  plugin.c
