pixmapdir = $(datadir)/crazyparking/pixmaps
pixmap_DATA = \
	car_blue_right.bmp \
	car_blue_up.bmp \
	car_green_right.bmp \
	car_green_up.bmp \
	car_red_right.bmp \
	car_red_up.bmp \
	car_yellow_right.bmp \
	car_yellow_up.bmp \
	font_0.bmp \
	font_1.bmp \
	font_2.bmp \
	font_3.bmp \
	font_4.bmp \
	font_5.bmp \
	font_6.bmp \
	font_7.bmp \
	font_8.bmp \
	font_9.bmp \
	games-startup-crazyparking.png \
	grid_over_right_1.bmp \
	grid_over_right_2.bmp \
	grid_over_right_3.bmp \
	grid_over_up_1.bmp \
	grid_over_up_2.bmp \
	grid_over_up_3.bmp \
	level_cleared.bmp \
	level_over.bmp \
	over_right_1.bmp \
	over_right_2.bmp \
	over_right_3.bmp \
	over_up_1.bmp \
	over_up_2.bmp \
	over_up_3.bmp \
	park.bmp \
	truck_2_right.bmp \
	truck_2_up.bmp \
	truck_over_right_1.bmp \
	truck_over_right_2.bmp \
	truck_over_right_3.bmp \
	truck_over_up_1.bmp \
	truck_over_up_2.bmp \
	truck_over_up_3.bmp \
	truck_right.bmp \
	truck_up.bmp

icondir = $(datadir)/pixmaps
icon_DATA = qgn_list_crazyparking.png

EXTRA_DIST = $(pixmap_DATA) $(icon_DATA)
